# new-experience

./: README.md
bash/: firstfunc.sh  funcposargu.sh  hello.txt  hellothere.sh  ifelifelse.sh  login.sh
flaskapp/: app.py
flaskapp/templates/: index.html  update.html
garbage/: cor.py  eng.txt  langgraph.json  m.py  main.py  pyproject.toml  tts.py  салтыков.txt
garbage/.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
garbage/MIT/: IOAO.docx
garbage/llm-docker/: Dockerfile
garbage/project/: .env  langgraph.ipynb  langgraph_1.py  pyproject.toml  structured_output_notebook.ipynb  workshop.ipynb
garbage/python/: 1.py  2.py  3.py  4.py  5.py
garbage/task/__MACOSX/: ._before
garbage/task/after/: train.py
garbage/task/after/.logs/my-mlflow-logs/0/: meta.yaml
garbage/task/after/conf/: config.yaml
garbage/task/after/fbp/: data.py
garbage/task/after/outputs/2025-11-27/20-11-48/.hydra/: hydra.yaml
garbage/task/after/wandb/: latest-run
garbage/task/after/wandb/run-20251127_205754-y994qtes/: run-y994qtes.wandb
garbage/task/before/conf/: config.yaml
go/: arrays.go  fizzbuzz.go  map.go  pointers.go  slices.go  struct.go  task1.go  task2.go  task3.go  task4.go  task5.go  task6.go  task7.go
instance/: test.db
mirea/: психология_Салтыков.docx
mirea/avms/: .$prak4.drawio.bkp  Untitled Diagram.drawio  prak3-4.docx  prak3.drawio  практика 2.docx  тема 1.docx  фмыаыф.docx
mirea/trpp/: Практика 1.docx
(+24 files in other folders)
