[project]
name = "project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "email-assistant>=0.0.0",
    "jupyter>=1.1.1",
    "langchain>=1.0.8",
    "langchain-community>=0.4.1",
    "langchain-ollama>=1.0.0",
    "langchain-openai>=1.0.3",
    "langfuse>=3.10.1",
    "langgraph>=1.0.3",
    "langgraph-cli[inmem]>=0.4.7",
    "langgraph-sdk>=0.2.9",
    "pydantic>=2.12.4",
    "pylance>=0.39.0",
    "rich>=14.2.0",
]
